@startuml

!theme plain
left to right direction

class article {
    id: int
    title : string
    excerpt : string
    content : string
    user_id : int
    created_at : datetime
    updated_at : datetime
}

class comment {
    id : int
    content : string
    isApproved : bool
    article_id : int
    user_id : int
    created_at : datetime
    updated_at : datetime
}

class users {
    id : int
    firstname : string
    lastname : string
    email : string
    password : string
    isValidated : bool
    isAdmin : bool
    created_at : datetime
    updated_at : datetime
}

class contact {
    id : int
    firstname : string
    lastname : string
    mail : string
    message : string
    user_id : int
    created_at : datetime
    updated_at : datetime
}

contact "*" -- "0..1" users : envoyer
article "*" -- "1" users : écrire
comment "*" -- "1" users : publier
article "1" -- "*" comment : appartenir

@enduml